second commit on mar29

--- a/src/app/add-new-product/add-new-product.component.html
+++ b/src/app/add-new-product/add-new-product.component.html
@@ -27,7 +27,7 @@
                     <div class="d-flex justify-content-end">
                         <button mat-stroked-button style="margin-right: 10px;" color="primary" type="submit">Add
                             Product</button>
-                        <button mat-stroked-button color="primary">Clear Form</button>
+                        <button mat-stroked-button color="primary" type="reset">Clear Form</button>
                     </div>
                 </form>
             </div>
