--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -34,7 +34,9 @@
 </mat-toolbar>
 <mat-toolbar color="primary">
     <button mat-raised-button color="primary" routerLink="/">Home</button>
-    <button mat-raised-button color="primary" routerLink="add-new-product">Add New Product</button>
+    <button mat-raised-button color="primary" routerLink="add-new-product" >Add New Product</button>
+    <span class="toolbar-item-spacer"></span>
+    <button mat-raised-button color="primary" routerLink="cart">Cart Products</button>
 </mat-toolbar>
 <mat-sidenav-container class="app-container">
     <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav">
