--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -26,3 +26,27 @@ table {
     color: black;
     width: 400px; width: 200px;
 }
+// .card-deck {
+//   display: flex;
+//   flex-wrap: wrap;
+//   margin-right: -15px;
+//   margin-left: -15px;
+// }
+
+// .card {
+//   margin-bottom: 30px;
+// }
+
+// @media (min-width: 768px) {
+//   .card-deck .card {
+//     flex: 1 0 calc(33.333333% - 30px);
+//     max-width: calc(33.333333% - 30px);
+//   }
+// }
+
+// @media (min-width: 992px) {
+//   .card-deck .card {
+//     flex: 1 0 calc(50% - 30px);
+//     max-width: calc(50% - 30px);
+//   }
+// }
