--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -22,9 +22,15 @@ table {
     width: 200px;
 }
 .button2{
-    background-color: white;
-    color: black;
-    width: 400px; width: 200px;
+  background-color: white;
+  color: black;
+  margin-right: 30px;
+  width: 400px; width: 200px;
+}
+.button3{
+background-color: white;
+color: black;
+width: 400px; width: 200px;
 }
 // .card-deck {
 //   display: flex;
