--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -24,5 +24,16 @@ table {
 .button2{
     background-color: white;
     color: black;
+    margin-right: 30px;
     width: 400px; width: 200px;
+}
+.button3{
+  background-color: white;
+  color: black;
+  width: 400px; width: 200px;
+}
+.prodquantity{
+  width: 30px;
+  border-radius: 5px;
+  text-align: center;
 }
