--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -17,9 +17,9 @@
             <td>{{cartProduct.productDiscountPrice}}</td>
             <td>
               <div class="button-container">
-                <a class="btn text-white" style="background-color: #55acee;"role="button" (click)="decCartProdQuantity(cartProduct.productId)">-</a>
+                <a class="btn text-white" style="background-color: #55acee;"role="button" type="number" (click)="decCartProdQuantity(cartProduct.productId)">-</a>
                 <input type="text" class="inputbox prodquantity" value="{{cartProduct.quantity}}">
-                <a class="btn text-white" style="background-color: #55acee;" role="button" (click)="incCartProdQuantity(cartProduct.productId)">+</a>
+                <a class="btn text-white" style="background-color: #55acee;" role="button" type="number" (click)="incCartProdQuantity(cartProduct.productId)">+</a>
               </div>
             </td>
             <!-- <td><button mat-raised-button class="button1">quantity</button></td> -->
@@ -27,6 +27,7 @@
                 <div class="button-container">
                     <button mat-raised-button class="button2" (click)="purchase()">purchase</button>
                     <button mat-raised-button class="button3" (click)="delete(cartProduct.id)">delete</button>
+                    <a class="btn text white" style="background-color: #55acee;" role="button"(click)="showProductDetails(cartProduct.productId)">view more</a>
 
                 </div>
             </td>
@@ -37,28 +38,3 @@
     <h2>Total Price: ₹{{ cartprice }}</h2>
 </div>
 
-
-
-<!-- <div class="carttable container">
-    <div class="card-deck d-flex justify-content-center">
-      <div class="row">
-        <div class="col-md-4" *ngFor="let cartProduct of cartData">
-          <div class="card mb-4">
-            <img class="card-img-top" src="{{ cartProduct.imageUrl }}" alt="{{ cartProduct.productName }}" style="height: 150px; width: 150px;">
-            <div class="card-body">
-              <h5 class="card-title">{{ cartProduct.productName }}</h5>
-              <p class="card-text">{{ cartProduct.productDescription }}</p>
-              <p class="card-text">Actual Price: {{ cartProduct.productActualPrice }}</p>
-              <p class="card-text">Discounted Price: {{ cartProduct.productDiscountPrice }}</p>
-              <button class="btn btn-primary" (click)="purchase()">Purchase</button> &nbsp;
-              <button class="btn btn-primary" (click)="delete(cartProduct.id)">delete</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div>
-    <h3>Total Price:</h3>
-</div> -->
