--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -32,6 +32,13 @@ background-color: white;
 color: black;
 width: 400px; width: 200px;
 }
+.prodquantity{
+  width: 30px;
+  height: 35px;
+  border-radius: 5px;
+  text-align: center;
+  border-color: azure;
+}
 // .card-deck {
 //   display: flex;
 //   flex-wrap: wrap;
