--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -34,6 +34,8 @@ table {
 }
 .prodquantity{
   width: 30px;
+  height: 35px;
   border-radius: 5px;
   text-align: center;
+  border-color: azure;
 }
