--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
-    <button mat-icon-button (click)="sidenav.toggle()" matTooltip="Menu">
+    <!-- <button mat-icon-button (click)="sidenav.toggle()" matTooltip="Menu">
         <mat-icon>menu</mat-icon>
-    </button>
+    </button> -->
     <span>ANGULAR</span>
     <span class="toolbar-item-spacer"></span>
     <!-- <button mat-icon-button matTooltip="Like">
@@ -38,7 +38,7 @@
     <span class="toolbar-item-spacer"></span>
     <button mat-raised-button color="primary" routerLink="cart">Cart Products</button>
 </mat-toolbar>
-<mat-sidenav-container class="app-container">
+<!-- <mat-sidenav-container class="app-container">
     <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav">
         <mat-nav-list>
             <mat-list-item routerLink="#">
@@ -70,11 +70,13 @@
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
-        <router-outlet>
+        <router-outlet> -->
             <!-- <div class="app-sidenav-content">
                 Components open here
             </div> -->
-        </router-outlet>
+        <!-- </router-outlet>
     </mat-sidenav-content>
-</mat-sidenav-container> 
-
+</mat-sidenav-container>  -->
+<router-outlet> 
+   
+ </router-outlet> 
