--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -26,7 +26,7 @@
             <td>
                 <div class="button-container">
                     <button mat-raised-button class="button2" (click)="purchase()">purchase</button>
-                    <button mat-raised-button class="button3" (click)="delete(cartProduct.id)">delete</button>
+                    <button mat-raised-button class="button3" (click)="delete(cartProduct.productId)">delete</button>
                     <a class="btn text white" style="background-color: #55acee;" role="button"(click)="showProductDetails(cartProduct.productId)">view more</a>
 
                 </div>
