--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -17,15 +17,18 @@
 
   
   .button-container button {
-    margin: 10px 0;
+    margin: 20px 0;
   }
 .button1{
     background-color: white;
     color: black;
     width: 400px;
+    padding: 50px;
 }
 .button2{
     background-color: white;
     color: black;
     width: 400px;
+    padding: 50px;
+
 }
