--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 
 
-<div class="centered-container">
+<div class="centered-container" *ngIf="!loginDisplay">
     <div class="button-container">
-        <button mat-fab extended class="button1" *ngIf="!loginDisplay" (click)="login()">
-            <!-- <mat-icon>favorite</mat-icon> -->
+        <button mat-fab extended class="button1" (click)="login()">
             Login With Microsoft
         </button>
         <button mat-fab extended class="button2">
@@ -13,8 +12,8 @@
     </div>
 </div>
 <div class="container">
-    <!--This is to avoid reload during acquireTokenSilent() because of hidden iframe -->
     <router-outlet *ngIf="!isIframe"></router-outlet>
+    
   </div>
 
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
