--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!-- <p>hhdujasw</p> -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 
 
@@ -15,5 +16,6 @@
     <router-outlet *ngIf="!isIframe"></router-outlet>
     
   </div>
-
-<!-- <router-outlet></router-outlet> -->
+  <!-- <app-sidenav></app-sidenav>
+  <app-cart></app-cart> -->
+<router-outlet></router-outlet>
