--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,4 +1,5 @@
-<div *ngIf="loginDisplay">
+
+<div *ngIf="loginDisplay" class="sidenav">
 <mat-toolbar color="primary">
     <!-- <button mat-icon-button (click)="sidenav.toggle()" matTooltip="Menu">
         <mat-icon>menu</mat-icon>
@@ -40,7 +41,7 @@
     <button mat-raised-button color="primary" routerLink="cart">Cart Products</button>
 </mat-toolbar>
 
-<!-- <mat-sidenav-container class="app-container">
+ <!-- <mat-sidenav-container class="app-container">
     <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav">
         <mat-nav-list>
             <mat-list-item routerLink="#">
@@ -70,15 +71,15 @@
                 </mat-nav-list>
             </mat-expansion-panel>
         </mat-nav-list>
-    </mat-sidenav>
-    <mat-sidenav-content>
-        <router-outlet> -->
-            <!-- <div class="app-sidenav-content">
+    </mat-sidenav> -->
+    <!-- <mat-sidenav-content>
+        <router-outlet>
+             <div class="app-sidenav-content">
                 Components open here
-            </div> -->
-        <!-- </router-outlet>
-    </mat-sidenav-content>
-</mat-sidenav-container>  -->
+            </div> 
+         </router-outlet>
+    </mat-sidenav-content> -->
+<!-- </mat-sidenav-container>   -->
 
     <!--This is to avoid reload during acquireTokenSilent() because of hidden iframe -->
     <router-outlet *ngIf="!isIframe"></router-outlet>
