--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -1,17 +1,21 @@
+.sidenav{
+    position: absolute;
+    width: 100%;
+}
 .toolbar-item-spacer {
     flex: 1 1 auto;
 }
 
-.app-container {
-    height: 90%;
-    margin: 0;
-}  
-.app-sidenav {
-    width: 230px;
-}
-.app-sidenav-content {
-    display: flex;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-} 
+// .app-container {
+//     height: 90%;
+//     margin: 0;
+// }  
+// .app-sidenav {
+//     width: 230px;
+// }
+// .app-sidenav-content {
+//     display: flex;
+//     height: 100%;
+//     align-items: center;
+//     justify-content: center;
+// } 
