april19th commit

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -28,7 +28,7 @@
                     </button>
                     <button mat-raised-button class="button3" (click)="purchase(product)">
                         <!-- <mat-icon>favorite</mat-icon> -->
-                        Purchase
+                        buy
                     </button>
                     <a class="btn text white" style="background-color: #55acee;" role="button" (click)="showProductDetails(product.productId)">view more</a>
                 </div>
