--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -1,34 +1,31 @@
+table {
+  width: 90%;
+}
 .prodtable{
-  // position: absolute;
-  // width: 100%;
   display: flex;
   padding-top: 50px;
+  justify-content: center;
 }
-table {
-    width: 90%;
-  }
-
 .button-container {
     display: flex;
   }
 
-  .button1{
-    background-color: white;
-    color: black;
-    width: 400px;
-    margin-right: 30px;
-    width: 200px;
-}
+//   .button1{
+//     background-color: white;
+//     color: black;
+//     margin-right: 30px;
+//     width: 200px;
+// }
 .button2{
     background-color: white;
     color: black;
-    margin-right: 30px;
-    width: 400px; width: 200px;
+    margin-right: 10px;
+    width: 170px;
 }
 .button3{
   background-color: white;
   color: black;
-  width: 400px; width: 200px;
+  width: 70px;
 }
 .prodquantity{
   width: 30px;
